--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glob": "^8.1.0",
     "vite": "^4.5.2"
   },
-  "author": "Vitalii Sakhno <vitalik.tarasovich@gmail.com>",
+  "author": "Bogdan Troyan <bogdan.troyan@icloud.com>",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
